Fixed premature return

After setting ruby2_keywords for bmethod, the rest of arguments
had been ignored. [Bug #17558]